fix(renderer): apply dark mode properly to mermaid diagrams

--- a/frontend/src/extensions/external-lib-app-extensions/mermaid/mermaid.module.scss
+++ b/frontend/src/extensions/external-lib-app-extensions/mermaid/mermaid.module.scss
@@ -1,9 +1,9 @@
 /*!
- * SPDX-FileCopyrightText: 2022 The HedgeDoc developers (see AUTHORS file)
+ * SPDX-FileCopyrightText: 2026 The HedgeDoc developers (see AUTHORS file)
  *
  * SPDX-License-Identifier: AGPL-3.0-only
  */
 
 .mermaid > svg {
-  background-color: #f8f9fa;
+  background-color: transparent;
 }
